--- a/css/slider.css
+++ b/css/slider.css
@@ -1,5 +1,6 @@
 .slider {
   display: block;
+  margin-top: -90px;
 }
 
 .slide {
@@ -19,7 +20,7 @@
   height: 20px;
   width: 20px;
   margin: 0 2px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
