--- a/css/style.css
+++ b/css/style.css
@@ -375,8 +375,8 @@ section {
     margin-bottom: 5px;
   }
   .modal-content {
-    height: inherit;
+    height: fit-content;
     overflow: auto;
-    margin-top: 100px;
+    /* margin-top: 100px; */
   }
 }
